--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -90,6 +90,35 @@
         margin-bottom: 32px;
     }
 }
+
+.cater-card__pic {
+    position: relative;
+
+    // overflow: hidden;
+    &:hover .cater-card_img,
+    &:focus .cater-card_img {
+        opacity: 1;
+        // transform: scale(1);
+    }
+}
+
+.cater-placepic {
+    max-width: 100%;
+    display: block;
+}
+
+.cater-card_img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // transform: scale(0);
+    opacity: 0;
+
+    transition: all 0.5s;
+}
+
 .cater-place {
     padding-bottom: 24px;
     border-bottom: 1px solid #E1E1E1;
