--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -12,7 +12,11 @@
         </svg>
       </button>
       <div class="mobile__menu">
-        <button class="btn__header" type="button">Buy now</button>
+        <button class="btn__modal" type="submit">Buy now
+          <svg class="button__icon" width="24" height="24">
+            <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+          </svg>
+        </button>
         <nav class="navigation">    
           
               
@@ -49,4 +53,9 @@
     </div>
 </div>
 
-
+<!-- <button type="submit" class="online__button">
+  Подписаться
+  <svg class="button__icon" width="24" height="24">
+    <use href="./images/icons.svg#icon-icon-send"></use>
+  </svg>
+</button> -->
