--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -2,7 +2,7 @@
   
   .mobile__container {
     align-items: center;
-    position: relative;
+    // position: relative;
     display: flex;
     justify-content: space-between;
      padding: 16px 0;
@@ -72,7 +72,7 @@
   
   .mobile__menu {
     @media screen and (max-width: 767px) {
-      z-index: 1;
+      z-index: 5;
       overflow: auto;
       position: fixed;
       top: 0;
@@ -86,7 +86,7 @@
       background: #ffffff;
      
       transform: translateX(100%);
-      transition: transform 250ms var(--timing-function);
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   
     @media screen and (min-width: 768px) {
@@ -102,7 +102,7 @@
   
   
   .button__open,
-  .button__close {
+   {
     position: absolute;
     top: 10px;
     right: 15px;
@@ -112,10 +112,54 @@
   
     &:hover,
     &:focus,
-    &:active {
+   {
       fill: var(--accent-color);
     }
     @media screen and (min-width: 768px) {
     
     }
+  }
+  .button__close    {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  
+    background-color: transparent;
+    border: none;
+  
+    &:hover,
+    &:focus,
+   {
+      fill: var(--accent-color);
+    }
+    @media screen and (min-width: 768px) {
+    
+    }
+  }
+
+  .mobile__button {
+    cursor: pointer;
+    border: transparent;
+    // display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    margin-top: 20px;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-size: 16px;
+    line-height: 1.87;
+    color: #ffffff;
+  
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-top: 0;
+    }
+  }
+  
+  .button__icon {
+    margin-left: 10px;
+    fill: #ffffff;
   }
