--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -120,8 +120,8 @@
     />
     </div>
     <ul class="button-wrap">
-       <li><button type="button" class="hero-primary-btn btn">Products</button></li>
-       <li><button type="button" class="hero-secondary-btn btn">How it's made</button></li>
+       <li><a href="#products"><button type="button" class="hero-primary-btn btn">Products</button></a></li>
+       <li><a href="#how-it's-made"><button type="button" class="hero-secondary-btn btn">How it's made</button></a></li>
     </ul>
     
     </section>
