--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -243,6 +243,18 @@ padding-bottom: 17px;
     top: 92px;
     left: 117px;
     z-index: 1;
+    animation-name: icecream-cone;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+
+    @keyframes icecream-cone {
+        0% {
+            transform: translateY(400px);
+        }
+        100% {
+            transform: translateY(0);
+        }
+    }
 
     @include media(768px) {
         top: 80px;
@@ -253,12 +265,28 @@ padding-bottom: 17px;
         top: 108px;
         left: 636px;
     }
+
 }
+
+
+
 
 .milk-jug {
     position: absolute;
     @media screen and (max-width: 767px) {
         display: none;
+}
+    animation-name: milk-jug;
+    animation-duration: 1s;
+    animation-timing-function:linear;
+
+    @keyframes milk-jug {
+        0% {
+    transform: scale(0);
+    }
+        100% {
+    transform: scale(1);
+    }
 }
 
 @include media(768px) {
@@ -279,6 +307,19 @@ padding-bottom: 17px;
     @media screen and (max-width: 767px) {
         display: none;
 }
+    animation-name: girl-icecream;
+    animation-duration: 1s;
+    animation-timing-function:linear;
+
+@keyframes girl-icecream {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 
 @include media(768px) {
     top: 265px;
