--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,12 +1,10 @@
 @import './utils/vars';
 @import './utils/reset';
 
-
 @import './base/common';
 @import './utils/mixins';
 @import './components/button';
 @import './utils/tools';
-
 
 @import './layout/hero-header';
 @import './layout/mobile-menu';
@@ -21,3 +19,4 @@
 @import './layout/our-location-modal';
 @import './layout/read-more-modal';
 @import './layout/modal-franchise';
+@import './layout/_products__button-animation';
