fixed place name

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,6 @@
 <!-- Contacts -->
-<section class="section-contacts"><a href="" name="contacts"></a>
+<section class="section-contacts">
+  <a href="" name="contacts"></a>
   <div class="container">
     <h2 class="section__title visually-hidden">Our contacts</h2>
     <div class="contacts">
@@ -11,7 +12,7 @@
               <div class="cater-card__pic">
                 <div class="cater-placepic">
                   <div class="cater-place">
-                    <p class="cater-place__name">Los Angeles</p>
+                    <p class="cater-place__name">Chicago</p>
                     <p class="cater-place__text">
                       Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
@@ -146,7 +147,7 @@
               <div class="cater-card__pic">
                 <div class="cater-placepic">
                   <div class="cater-place">
-                    <p class="cater-place__name">Los Angeles</p>
+                    <p class="cater-place__name">New York</p>
                     <p class="cater-place__text">
                       Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
