add width for svg, add space for tel

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -115,7 +115,12 @@
     }
 
     &__icons {
+        height: 60px;
         fill: currentColor;
+
+        @media screen and (min-width: 1280px) {
+            height: 34px;
+        }
     }
 
     &__contact {
