--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -29,10 +29,10 @@
                 </li>
             </ul>
 
-            <p class="footer__text">Feel free to contact<a class="footer__tel link" href="tel:+61(0)383766284">+61 (0)
+            <p class="footer__text">Feel free to contact <a class="footer__tel link" href="tel:+61(0)383766284">+61 (0)
                     383 766 284</a></p>
 
         </div>
     </div>
     <p class="footer__copyright">© 2019 - IceCream. <br>All Rights Reserved.</p>
-</footer>
+</footer>npm
