--- a/src/sass/layout/_products__button-animation.scss
+++ b/src/sass/layout/_products__button-animation.scss
@@ -5,7 +5,7 @@
 
 .products__item-pink {
   //   transition: transform 300ms;
-  transform: translateX(-100%) perspective(400px) rotateY(180deg) translateX(-100%);
+  transform: translateX(-100%) perspective(400px) rotateY(180deg);
 }
 
 .products__item-caramel {
@@ -16,6 +16,6 @@
 .products__item-green {
   //   transition: transform 300ms;
   //   transform: perspective(400px) rotateY(180deg);
-  transform-origin: 100% 0;
-  transform: perspective(400px) rotate(-180deg);
+  transform-origin: 70% 10%;
+  transform: rotate(-155deg);
 }
