--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden" data-modal-franchise>
         <div class="wrapper">
-            
+            <div class="close-franchise" data-modal-franchise-close></div>
                     <form class="form-franchise">
                         <h2 class="form-franchise__title">to work with us</h2>
                         <p class="form-franchise__text">Sign up for a free consultation with an expert!</p>
