--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -12,8 +12,8 @@
         </svg>
       </button>
       <div class="mobile__menu">
-        <button class="btn__modal" type="submit">Buy now
-          <svg class="button__icon" width="24" height="24">
+        <button class="btn btn__modal" type="submit">Buy now
+          <svg class="button__icon" width="8" height="16">
             <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
           </svg>
         </button>
