--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -1,15 +1,27 @@
 
-  
+  .mobile__block {
+    z-index: 50;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    // background-color: aqua;
+  }
   .mobile__container {
+    
     align-items: center;
     // position: relative;
     display: flex;
     justify-content: space-between;
-     padding: 16px 0;
   
     @media screen and (min-width: 768px) {
     
     }
+  }
+
+  .navigation {
+  
   }
   
   .nav__link {
@@ -23,12 +35,12 @@
     font-size: 14px;
     line-height: 18px;
     
-    color: var(--main-title-color);
-    transition: color 250ms var(--timing-function);
+    color: var(--primary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
     &:hover,
     &:focus {
-      color: var(--accent-color);
+      color: var(--accent-text-color);
     }
     &:hover::after,
     &:focus::after {
@@ -37,52 +49,40 @@
   
     @media screen and (min-width: 768px) {
       display: block;
-      padding-top: 32px;
+      // padding-top: 32px;
       padding-bottom: 32px;
-      font-size: 14px;
-      line-height: 1.14;
-  
-      &.nav__link--current::after {
-        content: '';
-        position: absolute;
-        display: block;
-        width: 100%;
-        bottom: 0;
-        background-color: var(--accent-color);
-      }
-      &.nav__link--current {
-        color: var(--accent-color);
-        position: relative;
-      }
+      
+     
     }
   }
   
   .nav__item:not(:last-child) {
     @media screen and (max-width: 767px) {
       flex-direction: column;
-      margin-bottom: 32px;
+      margin-bottom: 23px;
+      border-bottom: 1px solid #E18298;
     }
   }
   
-  // .navigation {
-  //   display: flex;
-  //   align-items: center;
-  // }
+
   
   
   .mobile__menu {
+    position: absolute;
+    top: 0;
+    right: 0;
     @media screen and (max-width: 767px) {
-      z-index: 5;
+      // z-index: 5;
       overflow: auto;
-      position: fixed;
-      top: 0;
-      left: 0;
+     
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       width: 100%;
       height: 100%;
-      padding: 48px 40px;
+      padding-left: 20px;
+      padding-top: 60px;
+      // padding: 48px 40px;
       background: #ffffff;
      
       transform: translateX(100%);
@@ -90,7 +90,10 @@
     }
   
     @media screen and (min-width: 768px) {
-     
+// z-index: 7;
+    
+      transform: translateX(100%);
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
   
@@ -99,67 +102,50 @@
     transform: translateX(0);
     background-color: #E17992;
   }
-  
-  
-  .button__open,
-   {
+
+  .button__open    {
     position: absolute;
-    top: 10px;
-    right: 15px;
+    top: 27px;
+    right: 20px;
   
     background-color: transparent;
     border: none;
   
     &:hover,
-    &:focus,
+    &:focus
    {
-      fill: var(--accent-color);
+      fill: var(--btn-accent-bg-color);
     }
     @media screen and (min-width: 768px) {
-    
+    right: 224px;
     }
   }
+
+
+
   .button__close    {
     position: absolute;
-    top: 10px;
-    right: 15px;
+    top: 20px;
+    right: 20px;
   
     background-color: transparent;
     border: none;
   
     &:hover,
-    &:focus,
+    &:focus
    {
-      fill: var(--accent-color);
+      fill: var(--btn-accent-bg-color);
     }
     @media screen and (min-width: 768px) {
     
     }
   }
 
-  .mobile__button {
-    cursor: pointer;
-    border: transparent;
-    // display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
-    height: 50px;
-    margin-top: 20px;
-    background: #2196f3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-size: 16px;
-    line-height: 1.87;
-    color: #ffffff;
-  
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      margin-top: 0;
-    }
-  }
-  
   .button__icon {
-    margin-left: 10px;
-    fill: #ffffff;
+    margin-left: 16px;
   }
+
+ 
+
+
+  
