--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,4 +35,4 @@
         </div>
     </div>
     <p class="footer__copyright">© 2019 - IceCream. <br>All Rights Reserved.</p>
-</footer>npm
+</footer>
