--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -125,6 +125,7 @@
     @include btn-color(#D41443, #FFFFFF, #ECEBEB);
     @include font(700, 16px, 21px, null);
     border: none;
+    transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .bnt-about__icon {
