добавил анимаций и пофиксил баги

--- a/src/partials/buy-now-modal.html
+++ b/src/partials/buy-now-modal.html
@@ -1,6 +1,5 @@
-<button data-modal-buy-now-open type="button" class="hero__button button">Заказать услугу</button>
 <!-- Modal -->
-<div data-modal-buy-now class="backdrop-buy-now backdrop-buy-now--is-hidden">
+<div class="backdrop-buy-now backdrop-buy-now--is-hidden">
   <div class="modal-buy-now">
     <form class="form" action="javascript:void(0);">
       <b class="form__title">BUY NOW</b>
@@ -47,5 +46,3 @@
     </button>
   </div>
 </div>
-
-<script src="./js/modal-buy-now.js"></script>
