--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,10 +1,17 @@
 .products {
 
+  padding-top: 80px;
+
   @media  screen and (max-width:1279px){
   padding-bottom: 40px;
   }
 
+  @media  screen and (min-width:768px) {
+    padding-top: 40px
+  }
+
   @media  screen and (min-width:1280px){
+    padding-top: 60px;
     padding-bottom: 60px;
     }
 }
@@ -38,7 +45,8 @@
  
  .products__title{
    
-   padding-bottom: 148px;
+  
+  margin-bottom: 148px;
    font-family: 'Titan One', sans-serif;
    font-size: 34px;
    line-height: 1.15;
@@ -48,13 +56,13 @@
    color: var(--accent-text-color);
 
    @media  screen and (min-width:768px) {
-    padding-bottom: 154px;
+    margin-bottom: 154px;
     font-size: 48px;
     line-height: 1.14;
   }
 
   @media  screen and (min-width:1280px) {
-   
+    
     font-size: 58px;
     line-height: 1.14;
     letter-spacing: 0.06em;
@@ -63,16 +71,16 @@
  }
  
  .products__item-title{
- 
+    font-weight: 400;
     padding-top: 155px;
     margin-bottom: 32px;
     font-family: 'Titan One', sans-serif;
-   font-size: 20px;
-   line-height: 1.15;
-   letter-spacing: 0.04em;
-   text-transform: uppercase;
-   color: var(--primary-text-color);
-   margin-bottom: 32px;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--primary-text-color);
+    margin-bottom: 32px;
 
    
   
@@ -126,6 +134,7 @@
     margin-bottom: 60px;
     
     
+    
   }
  }
  
@@ -151,15 +160,21 @@
    position: relative;
    border-radius: 24px;
    margin: 0 auto;
+   padding-right: 38px;
+   padding-left: 38px;
 
    @media  screen and (min-width: 768px) {
     flex-basis: calc((100% - 32px) / 2);
     margin: 16px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 
   @media  screen and (min-width: 1280px) {
     flex-basis: calc((100% - 64px) / 2);
     margin: 32px;
+    padding-left: 77px;
+    padding-right: 77px;
   }
 
    &:not(:last-child){
@@ -197,6 +212,12 @@
   border: none;
   background-color: var(--primary-text-color);
   cursor: pointer;
+  transition: border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+&:focus {
+  border-radius: 0;
+}
  }
 
  .products-icon{
