--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,12 +1,12 @@
 @import './utils/vars';
 @import './utils/reset';
 
-
 @import './base/common';
 @import './utils/mixins';
 @import './components/button';
 @import './utils/tools';
 
+@import './animations/animate.min';
 
 @import './layout/hero-header';
 @import './layout/mobile-menu';
