перекинул в другую папку animate

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,8 +5,7 @@
 @import './utils/mixins';
 @import './components/button';
 @import './utils/tools';
-
-@import './animations/animate.min';
+@import './utils/animate.min';
 
 @import './layout/hero-header';
 @import './layout/mobile-menu';
