--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -12,7 +12,16 @@
             <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
             <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
         </ul>
-    <button type="button" class="btn__header btn">Buy now</button>
+        <button type="button" class="burger-open-btn btn">
+          <svg class="#" width="20" height="12">
+            <use href="./images/icons/icons.svg#icon-Burger"></use>
+          </svg>
+        </button>
+    <button type="button" class="btn__header btn">Buy now
+      <svg class="btn-about__icon" width="4" height="8">
+        <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+    </svg>
+    </button>
     </nav>
     <ul class="hero-advantages">
         <li class="hero-advantages__item">
@@ -120,8 +129,8 @@
     />
     </div>
     <ul class="button-wrap">
-       <li><a href="#products"><button type="button" class="hero-primary-btn btn">Products</button></a></li>
-       <li><a href="#how-it's-made"><button type="button" class="hero-secondary-btn btn">How it's made</button></a></li>
+       <li><a href="#products" class="hero-primary-btn btn">Products</a></li>
+       <li><a href="#how-it's-made" class="hero-secondary-btn btn">How it's made</a></li>
     </ul>
     
     </section>
