--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+  }
+
 .hero-header-wrap {
     background-color: var(--main-bg-color);
     z-index: -1;
@@ -9,7 +13,6 @@
     position: relative;
     height: 502px;
     
-
     padding-top: 8px;
     padding-right: 20px;
     padding-left: 20px;
@@ -20,16 +23,12 @@
         height: 502px;
     }
         
-    
-
     @include media(768px) {
         width: 768px;
         height: 416px;
         padding-top: 32px;
         padding-right: 32px;
         padding-left: 32px;
-
-
     }
 
     @include media(1280px) {
@@ -57,7 +56,6 @@
     margin-right: auto;
     z-index: 1;
     
-   
     @media screen and (max-width: 1279px) {
         display: none;
 }
@@ -79,8 +77,6 @@
     color: var(--accent-text-color);
 }
 
-
-
 .hero-advantages {
     position: absolute;
     z-index: 1;
@@ -91,7 +87,6 @@
         top: 94px;
         right: 42px;
     }
-
 
     @include media(1280px) {
         top: 157px;
@@ -110,23 +105,19 @@ padding-bottom: 17px;
     text-transform: uppercase;
     color: var(--accent-text-color);
 
-
     @include media(768px) {
         @include font (400, 28px, 32px, 0.04em);
         padding-bottom: 2px;
     }
-    
     @include media(1280px) {
         @include font (400, 46px, 53px, 0.04em); 
     }
-
 }
 
 .hero-advantages__text {
     font-family: 'DM Sans';
     text-align: right;
     color: var(--primary-text-color);
-
 
     @include media(768px) {
         @include font (400, 8px, 10px, null);
@@ -137,14 +128,30 @@ padding-bottom: 17px;
     }
 }
 
-
 .btn__header {
     @media screen and (max-width: 767px) {
         display: none;
 }
 }
-     
 
+.btn-about__icon {
+    margin-left: 12px;
+}
+
+.burger-open-btn {
+    margin-left: auto;
+    padding: 0;
+    background-color: transparent;
+    @include media(768px) {
+        margin-left: 293px;
+        margin-right: 32px;
+    }
+
+    @include media(1280px) {
+        display: none;
+}
+}
+     
 .hero-title {
     position: absolute;
     z-index: 2;
@@ -173,7 +180,6 @@ padding-bottom: 17px;
         width: 277px;
         height: 137px;
     }
-  
 }
 
 .hero-title__current {
@@ -260,16 +266,11 @@ padding-bottom: 17px;
         top: 80px;
         left: 322px;
     }
-
     @include media(1280px) {
         top: 108px;
         left: 636px;
     }
-
 }
-
-
-
 
 .milk-jug {
     position: absolute;
@@ -407,7 +408,6 @@ padding-bottom: 17px;
         top: 308px;
         left: 16px;
     }
-    
 }
 
 .hero-primary-btn {
@@ -423,7 +423,6 @@ padding-bottom: 17px;
 
         margin-right: 12px; 
     }
-
 }
 
 .hero-secondary-btn {
