--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -33,26 +33,48 @@
    &:first-child::before {
     content: "";
     display: block;
-    background-image: url(../images/img/adv-icon-1.png);
-
+    background-image: url(../images/img/adv-icon-1-1x.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 33px;
     height: 50px;
-   }
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: 
+            url(../images/img/adv-icon-1-2x.png);
+    }
+    
+ }
    &::before {
     content: "";
     display: block;
-    background-image: url(../images/img/adv-icon-2.png);
-
-    width: 50px;
+    background-image: url(../images/img/adv-icon-2-1x.png);
+     width: 50px;
     height: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image:
+            url(../images/img/adv-icon-2-2x.png);
+    }
    }
    &:last-child::before {
     content: "";
     display: block;
-    background-image: url(../images/img/adv-icon-3.png);
-
+    background-image: url(../images/img/adv-icon-3-1x.png);
     width: 44px;
     height: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image:
+            url(../images/img/adv-icon-3-2x.png);
+    }
    }
 }
 
