--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -17,25 +17,13 @@
             <use href="./images/icons/icons.svg#icon-Burger"></use>
           </svg>
         </button>
-    <button type="button" class="btn__header btn">Buy now
+    <button data-modal-buy-now-open type="button" class="btn__header btn">Buy now
       <svg class="btn-about__icon" width="4" height="8">
         <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
     </svg>
     </button>
     </nav>
-    <ul class="hero-advantages">
-        <li class="hero-advantages__item">
-            <p class="hero-advantages__numbers">16</p>   
-            <p class="hero-advantages__text">cafes</p>
-        </li>
-        <li class="nav__menu-item"><a class="nav__menu-link" href="#about-us">About us</a></li>
-        <li class="nav__menu-item">
-          <a class="nav__menu-link" href="#how-it's-made">How it's made</a>
-        </li>
-        <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
-        <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
-      </ul>
-      <button data-modal-buy-now-open type="button" class="btn__header btn">Buy now</button>
+
     </nav>
     <ul class="hero-advantages">
       <li class="hero-advantages__item">
