--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -4,24 +4,33 @@
     <div class="container mobile__container">
     
       
-      <button type="button" class="button__open" >
+      <!-- <button type="button" class="button__open" >
         <svg class="" width="30" height="30">
           <use href="./images/icons/icons.svg#icon-Burger">
       
           </use>
         </svg>
-      </button>
+      </button> -->
       <div class="mobile__menu">
+      <button type="button" class="button__close">
+        <svg class="" width="30" height="30">
+          <use href="./images/icons/icons.svg#icon-close">
+      
+          </use>
+        </svg>
+      </button>
+
+      
         <button class="btn btn__modal" type="submit">Buy now
           <svg class="button__icon" width="8" height="16">
             <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
           </svg>
         </button>
+
+
         <nav class="navigation">    
           
-              
-                
-            <ul class="nav__list">
+                <ul class="nav__list">
                 <li class="nav__item">
                   <a class="nav__link nav__link--current" href="./index.html"> Home</a>
                 </li>
@@ -42,13 +51,7 @@
         </nav>
         
         
-        <button type="button" class="button__close">
-          <svg class="" width="30" height="30">
-            <use href="./images/icons/icons.svg#icon-close">
-        
-            </use>
-          </svg>
-        </button>
+       
       </div>
     </div>
 </div>
