--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,7 +1,7 @@
 
      <!--mobile menu -->
-<div class="mobile__block ">
-    <div class="container mobile__container">
+<!-- <div class="mobile__block "> -->
+    <!-- <div class="container mobile__container"> -->
     
       
       <!-- <button type="button" class="button__open" >
@@ -12,7 +12,7 @@
         </svg>
       </button> -->
       <div class="mobile__menu">
-      <button type="button" class="button__close">
+      <button type="button" class="button__close">X
         <svg class="" width="30" height="30">
           <use href="./images/icons/icons.svg#icon-close">
       
@@ -53,8 +53,8 @@
         
        
       </div>
-    </div>
-</div>
+    <!-- </div> -->
+<!-- </div> -->
 
 <!-- <button type="submit" class="online__button">
   Подписаться
