--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -1,24 +1,24 @@
 
-  .mobile__block {
-    z-index: 50;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    // background-color: aqua;
-  }
-  .mobile__container {
+  // .mobile__block {
+  //   z-index: 50;
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100vw;
+  //   height: 100vh;
     
-    align-items: center;
-    // position: relative;
-    display: flex;
-    justify-content: space-between;
+  // // }
+  // .mobile__container {
+    
+  //   align-items: center;
+  //   // position: relative;
+  //   display: flex;
+  //   justify-content: space-between;
   
-    @media screen and (min-width: 768px) {
+  //   @media screen and (min-width: 768px) {
     
-    }
-  }
+  //   }
+  // }
 
   .navigation {
   
@@ -68,25 +68,33 @@
   
   
   .mobile__menu {
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
+    z-index: 11;
+    width: 250px;
+    height: 100vh;
+    padding-left: 20px;
+    padding-top: 60px;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // position: absolute;
+    // top: 0;
+    // right: 0;
     @media screen and (max-width: 767px) {
       // z-index: 5;
-      overflow: auto;
+      // overflow: auto;
      
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 100%;
-      height: 100%;
-      padding-left: 20px;
-      padding-top: 60px;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: space-between;
+      // width: 100%;
+      // height: 100%;
+     
       // padding: 48px 40px;
-      background: #ffffff;
+      // background: #ffffff;
      
-      transform: translateX(100%);
-      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
     }
   
     @media screen and (min-width: 768px) {
