slider-final-fix

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -71,14 +71,14 @@
         <p class="review-slider-dots__text">Sandra, Denver</p>
       </div>
 
-      <a class="review-slider__prev" onclick="minusSlide()"></a>
-      <a class="review-slider__next" onclick="plusSlide()"></a>
+      <a class="review-slider__prev" id="slidePrev"></a>
+      <a class="review-slider__next" id="slideNext"></a>
     </div>
 
     <div class="review-slider-dots">
-      <span class="review-slider-dots__item" onclick="currentSlide(1)"></span>
-      <span class="review-slider-dots__item" onclick="currentSlide(2)"></span>
-      <span class="review-slider-dots__item" onclick="currentSlide(3)"></span>
+      <span class="review-slider-dots__item" id="slideOne"></span>
+      <span class="review-slider-dots__item" id="slideTwo"></span>
+      <span class="review-slider-dots__item" id="slideThree"></span>
     </div>
   </div>
 </section>
