--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -9,6 +9,7 @@
                 <source srcset="./images/img/m1-mob_1x.png 1x, ./images/img/m1-mob_2x.png 2x" media="(max-width: 767px)" />
                 <img src="./images/img/m1-desk_1x.png" alt="Cow and milk">
             </picture>
+            <div class="about-img"></div>
             <div class="about-text">
                 <p class="about-text__description-top">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
                     cursus,
