--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -101,6 +101,7 @@
         border-radius: 50%;
         color: #FEA5BB;
         background-color: #ffffff;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
         &:focus {
