--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,7 +8,7 @@
   <ul class="products__list">
     <li class="products__item accent--pink">
       <div class="products__trumb trumb-pink ">
-         <picture>
+         <!-- <picture>
           <source
           
           srcset="
@@ -38,7 +38,7 @@
          media="(min-width: 480px)" 
           />
           <img class="products__img" src="././images/img/p1-mob_1x.png" alt="ice cream"  width="280">
-        </picture>
+        </picture> -->
       </div>
       <h3 class="products__item-title">ice cream</h3>
       
@@ -81,7 +81,7 @@
     
     <li class="products__item accent--caramel">
       <div class="products__trumb trumb-caramel ">
-         <picture>
+         <!-- <picture>
         <source
         
         srcset="
@@ -111,7 +111,7 @@
        media="(min-width: 480px)" 
         />
         <img class="products__img" src="././images/img/p2-mob_1x.png" alt="ice cream"  width="280">
-      </picture>
+      </picture> -->
     </div>
       
       <h3 class="products__item-title">ice coffee</h3>
@@ -155,7 +155,7 @@
     
     <li class="products__item accent--green">
       <div class="products__trumb  trumb-green">
-        <picture>
+        <!-- <picture>
           <source
           
           srcset="
@@ -185,7 +185,7 @@
          media="(min-width: 480px)" 
           />
           <img class="products__img" src="././images/img/p3-mob_1x.png" alt="ice coffee"  width="280">
-        </picture>
+        </picture> -->
       </div>
       
       <h3 class="products__item-title">milkshakes</h3>
