--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -139,12 +139,18 @@ padding-bottom: 17px;
 }
 
 .burger-open-btn {
-    margin-left: auto;
+    position: absolute;
+    z-index: 50;
+    // margin-left: auto;
+    right: 0;
+    margin-right: 20px;
     padding: 0;
     background-color: transparent;
     @include media(768px) {
-        margin-left: 293px;
-        margin-right: 32px;
+        // margin-left: 293px;
+        // margin-right: 32px;
+        // right: 0;
+        margin-right: 224px;
     }
 
     @include media(1280px) {
