--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -70,7 +70,7 @@
   .mobile__menu {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     z-index: 11;
     width: 250px;
     height: 100vh;
@@ -78,30 +78,13 @@
     padding-top: 60px;
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-    @media screen and (max-width: 767px) {
-      // z-index: 5;
-      // overflow: auto;
-     
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: space-between;
-      // width: 100%;
-      // height: 100%;
-     
-      // padding: 48px 40px;
-      // background: #ffffff;
-     
-     
-    }
+ 
   
     @media screen and (min-width: 768px) {
-// z-index: 7;
+
     
-      transform: translateX(100%);
-      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      // transform: translateX(100%);
+      // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
   
